--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
             <img src="images/1pic.png">
         </div>
     </section>
+    <section class="Big-dream">
+        <div class="d1">
+            <img src="images/my-bg2.png">
+        </div>
+        <div>
+            <h1>Dream Big</h1>
+            <h1>Become a web Developer</h1>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" href="https://www.linkedin.com/in/anamika-goswami-02ba21242/"
+                target="_blank">DOWNLOAD RESUME</a>
+        </div>
+
+
+    </section>
 
 </body>
 
