--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="Welcome">
+    <section class="Welcome s1">
         <div class="d1">
             <h1>Welcome TO</h1>
             <h1><span class="orange"> Anamika Goswami</span> World!</h1>
@@ -29,11 +29,11 @@
             <img src="images/1pic.png">
         </div>
     </section>
-    <section class="Big-dream">
+    <section class="Big-dream s1">
         <div class="d1">
             <img src="images/my-bg2.png">
         </div>
-        <div>
+        <div class="d1">
             <h1>Dream Big</h1>
             <h1>Become a web Developer</h1>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
@@ -43,6 +43,26 @@
         </div>
 
 
+    </section>
+    <section class="Experience">
+        <h1>Experiences</h1>
+        <div class="s1">
+            <div class="d1">
+                <h1>Full Stack Developer</h1>
+                <h3>2022-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website
+                    function,efficient. I didn't stop with the web. I went beyond with most popular Javascript framework
+                    called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
+                </p>
+            </div>
+            <div class="d1">
+                <h1>Baby Web Developer</h1>
+                <h3>2022-present | Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+        </div>
     </section>
 
 </body>
